--- a/VeloNews/wwwroot/css/home.css
+++ b/VeloNews/wwwroot/css/home.css
@@ -5,7 +5,7 @@
 }
 
 .lastnews-section {
-    margin-top: 30px;
+    margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -16,7 +16,8 @@
     position: relative;
     width: 350px;
     height: 350px;
-    background: #D3D3D3;
+    background: #e0e0e0;
+    box-shadow: 5px 5px 22px 0px rgba(34, 60, 80, 0.2);
 }
 
     .lastnews-item:nth-child(-n+2) {
@@ -48,7 +49,7 @@
 }
 
 .lastnews-item-text {
-    padding: 10px 25px;
+    padding: 10px 5px;
 
 }
 
