--- a/VeloNews/wwwroot/css/user.css
+++ b/VeloNews/wwwroot/css/user.css
@@ -19,7 +19,7 @@
     width: 90%;
     padding: 20px;
     border-radius: 7px;
-    margin: 15px 0; 
+    margin: 15px 0;
 }
 
     .register li {
@@ -52,6 +52,7 @@
 .login-title {
     margin-top: 30px;
 }
+
 .login-desc {
     margin: 60px 0 15px 0;
 }
@@ -73,7 +74,7 @@
         width: 250px;
     }
 
-.login-item-text{
+.login-item-text {
     font-size: 13px;
     font-weight: 700;
 }
@@ -81,9 +82,10 @@
 .register-ref {
     margin-top: 100px;
 }
-.register-ref a{
-    color: blue;
-}
+
+    .register-ref a {
+        color: blue;
+    }
 
 
 /*-------PROFILE---------*/
@@ -92,18 +94,49 @@
     margin: 20px 0 40px 0;
 }
 
+.account-info {
+    margin: 20px;
+    border-bottom: 1px solid grey;
+}
+
 .profile-logout-text a {
     color: blue;
     text-decoration: underline;
 }
 
 .profile-info {
-    max-width: 300px;
-    border: 1px solid grey;
+    display: flex;
+    margin: 30px 0;
+    gap: 100px;
+    height: 250px;
 }
 
+.profile-avatar {
+    width: 250px;
+    text-align: center;
+}
+
+.profile-image-change {
+    padding: 10px;
+    text-align: center;
+    max-width: 250px;
+}
+
+    .profile-image-change input {
+        display: none;
+    }
+
+.profile-image {
+    padding: 5px 20px;
+}
+
+    .profile-image img {
+        max-width: 250px;
+        max-height: 150px;
+    }
+
 .profile-info-list {
-    
+    width: 400px;
 }
 
 .profile-info-item {
@@ -111,4 +144,43 @@
     display: flex;
     justify-content: space-between;
     padding: 5px 20px;
+}
+
+
+/*-------EDIT_PROFILE_________*/
+
+.field-validation-error {
+    margin: 0 20px;
+}
+.edit-block {
+    margin-top: 50px;
+    width: 800px;
+}
+.edit-block_list {
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-block_item {
+    display: flex;
+    
+    margin: 5px;
+}
+
+.block-item-title {
+    padding: 3px;
+    width: 200px;
+}
+.block-item-input input, select{
+    padding: 2px;
+    border-radius: 3px;
+    border-color: black;
+}
+
+.edit-block-submit input{
+    margin-top: 50px;
+    padding: 5px 15px;
+    background: green;
+    border-radius: 3px;
+    color:white;
 }
