add signalr to admin page

--- a/VeloNews/Views/Admin/AllNews.cshtml
+++ b/VeloNews/Views/Admin/AllNews.cshtml
@@ -1,5 +1,9 @@
 ﻿@using VeloNews.Models.AdminViewModels;
 
+@{
+    Layout = "~/Views/Shared/AdminLayout.cshtml";
+}
+
 @model PaginatorViewModel<NewsForAdminPageViewModel>
 
 @section Styles {
