--- a/VeloNews/Views/Shared/AdminLayout.cshtml
+++ b/VeloNews/Views/Shared/AdminLayout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Styles", required: false)
     @await RenderSectionAsync("Scripts", required: false)
@@ -44,7 +45,7 @@
                         <a href="/News/Index">News</a>
                     </li>
                     <li class="nav-item">
-                        <a>Races</a>
+                        <a href="/Admin/UserActivity">User Activity</a>
                     </li>
                     <li class="nav-item">
                         <a>Rating</a>
