--- a/VeloNews/Views/_ViewImports.cshtml
+++ b/VeloNews/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using VeloNews
 @using VeloNews.Models
+@using System.Globalization
+@namespace Localisation.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Localisation
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
