update seed method

--- a/VeloNews/Views/Shared/AdminLayout.cshtml
+++ b/VeloNews/Views/Shared/AdminLayout.cshtml
@@ -42,13 +42,10 @@
                         <a href="/Home/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/News/Index">News</a>
+                        <a href="/Admin/AllNews">All News</a>
                     </li>
                     <li class="nav-item">
                         <a href="/Admin/UserActivity">User Activity</a>
-                    </li>
-                    <li class="nav-item">
-                        <a>Rating</a>
                     </li>
                 </ul>
             </div>
@@ -57,21 +54,10 @@
     <section class="main">
         <div class="container">
             <div class="main-block">
-                <div class="left-menu">
-                    <ul class="left-menu-list">
-                        <li class="left-menu-item">
-                            <a href="/Admin/AllUsers">Users</a>
-                        </li>
-                        <li class="left-menu-item">
-                            <a href="/Admin/AllNews">News</a>
-                        </li>
-                    </ul>
-                </div>
                 <div class="content">
                     @RenderBody()
                 </div>
             </div>
-
         </div>
     </section>
 
