--- a/VeloNews/Views/Shared/AdminLayout.cshtml
+++ b/VeloNews/Views/Shared/AdminLayout.cshtml
@@ -57,13 +57,16 @@
                 @RenderBody()
             </div>
         </div>
-
-        </div>
     </section>
 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - VeloNews - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <div class="main-block">
+                <div class="content">
+                    @RenderBody()
+                </div>
+            </div>
         </div>
     </footer>
 </body>
