--- a/VeloNews/wwwroot/css/user.css
+++ b/VeloNews/wwwroot/css/user.css
@@ -74,6 +74,10 @@
         width: 250px;
     }
 
+    .login-input-item input[type=password] {
+        width: 250px;
+    }
+
 .login-item-text {
     font-size: 13px;
     font-weight: 700;
